# 1Click_QLSV

./: .gitattributes  .gitignore  README.md  pyproject.toml  start.sh
2.3.1/: HuongDan.txt  app_bak_05102025.py  app_new.py  jx_new.sh
configs/: quanlyserver.example.json
docs/: CONFIG.md  RUNNING.md
scripts/: jx.sh  run-web.sh
src/qlsv/: __init__.py  __main__.py  _atomic.py  app.py  config.py  i18n.py  net.py  processes.py  state.py  vn_charset.py
src/qlsv/jobs/: __init__.py  history.py  log_stream.py  runner.py
src/qlsv/tests/: test_app_skeleton.py  test_atomic.py  test_auth.py  test_config.py  test_dashboard_routes.py  test_end_to_end_phase2.py  test_i18n.py  test_jobs_routes.py  test_jobs_runner.py  test_net.py  test_network_routes.py  test_processes.py  test_services_routes.py  test_state.py  test_vn_charset.py
src/qlsv/web/: __init__.py  auth.py  dashboard.py  jobs.py  network.py  services.py
src/qlsv/web/static/: htmx-ext-sse.min.js.sha256  htmx.min.js.sha256  styles.css
src/qlsv/web/templates/: _banner_warning.html  _game_dir_card.html  _history_card.html  _ip_mac_card.html  _service_table.html  _tail_pane.html  _toast.html  base.html  dashboard.html  login.html
