[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlsv"
version = "3.0.0a1"
description = "1Click QLSV - Web admin for JX1 Offline server"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kenny Nguyen", email = "nguyentiendat713@gmail.com" }
]
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.40",
    "jinja2>=3.1,<4",
    "itsdangerous>=2.1,<3",
    "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qlsv = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["src/qlsv/tests"]
